# openCollar

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  CODE_TOUR.md  DEPLOYMENT.md  WINDOWS_RUN.md
scripts/: build_worker_portable.sh  deploy_shared_folder.sh  transfer_to_del_me.sh
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  logging.rs  main.rs  models.rs  worker.rs
src/components/: InspectorPanel.tsx  PromptComposer.tsx  RunDetails.tsx  RunHistory.tsx
src/hooks/: useOpenCollarApp.ts
src/lib/: mock.ts  tauri.ts  types.ts
worker/: main.py  requirements-build.txt  requirements-runtime.txt  requirements.txt
worker/open_collar/: __init__.py  browser.py  model_client.py  planner.py  runtime.py  schemas.py  tools.py
worker/tests/: test_model_client.py  test_planner.py  test_runtime.py
worker/tests/e2e/: test_notepadpp_scenario.py
worker/tests/integration/: test_windows_tools.py
